# openGL

GL_Training/: CMakeLists.txt  main.cpp
GL_Training/include/: Tester.hpp
GL_Training/src/: Tester.cpp
